public abstract class AccessoryDecorator extends Rectangle {


  }

