package Factory;

public abstract class Obstacle {
    public abstract String toString();
}
